# dpsfg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
csfg/: CMakeLists.txt
csfg/include/csfg/: init.h
csfg/include/csfg/graph/: graph.h  graph_op.h  node.h  path.h
csfg/include/csfg/io/: deserialize.h  io.h  serialize.h
csfg/include/csfg/numeric/: complex.h  cpoly.h  mat.h  poly.h  tf.h
csfg/include/csfg/platform/: backtrace.h  mfile.h
csfg/include/csfg/symbolic/: expr.h  expr_layout.h  expr_op.h  expr_opt.h  expr_tf.h  poly.h  poly_expr.h  rational.h  rulebook.h  rules.h  tf_expr.h  var_table.h
csfg/include/csfg/util/: backtrace.h  bm.h  bmap.h  hash.h  hmap.h  hmap_str.h  hset.h  log.h  mem.h  permutation.h  str.h  strlist.h  strview.h  tracker.h  vec.h
csfg/src/: init.c
csfg/src/graph/: graph.c  graph_find_nontouching.c  graph_find_paths_and_loops.c  graph_mason.c  graph_op_find_paths_and_loops.c  path.c
csfg/src/io/: binary.c  deserialize.c  expr.c  graph.c  graphviz.c  io.c  serialize.c  tikz.c  var_table.c
csfg/src/numeric/: cpoly.c  cpoly_find_roots.c  mat.c  mat_lu_decomposition.c  mat_solve_linear_system_lu.c  poly.c  poly_eval_inverse_laplace.c  poly_find_roots.c  poly_pfd.c  tf.c
csfg/src/platform/: backtrace_linux.c  backtrace_win32.c  mfile_posix.c  mfile_win32.c
csfg/src/symbolic/: expr.c  expr_canonicalize.c  expr_eval.c  expr_integrity_check.c  expr_layout.c  expr_layout.h  expr_next_chain_permutation.c  expr_op.c  expr_op_distribute_products.c  expr_op_expand_constant_exponents.c  expr_op_expand_exponent_products.c  expr_op_expand_exponent_sums.c  expr_op_factor_common_denominator.c  expr_op_lower_negates.c  expr_op_parse.c  expr_op_rebalance_fraction.c  expr_op_simplify_products.c  expr_op_simplify_sums.c  expr_op_tf.c  expr_opt_fold_constants.c  expr_opt_remove_useless_ops.c  expr_parse.c  expr_rotate_chain.c  expr_simplify.c  expr_tf.c  expr_zip_chains.c  ops.def  poly.c  poly_expr.c  rational.c  rule_distribute_products.c  rule_expand_constant_exponents.c  rule_expand_exponent_products.c  rule_expand_exponent_sums.c  rule_factor_common_denominator.c  rule_fold_constants.c  rule_lower_negates.c  rule_rebalance_fraction.c  rule_remove_useless_ops.c  rule_simplify_products.c  (+8 more)
csfg/src/util/: backtrace.c  bm.c  hash.c  log.c  mem.c  permutation.c  str.c  strlist.c  strview.c  tracker.c
csfg/templates/: config.h.in
csfg/tests/: LogHelper.cpp  Printers.cpp  test.cpp  test_bm.cpp  test_bmap.cpp  test_complex.cpp  test_cpoly_eval.cpp  test_cpoly_find_roots.cpp  test_expr.cpp  test_expr_apply_limit.cpp  test_expr_apply_limits.cpp  test_expr_canonicalize.cpp  test_expr_extract_poly_coeff.cpp  test_expr_insert_substitutions.cpp  test_expr_next_chain_permutation.cpp  test_expr_op_distribute_products.cpp  test_expr_op_expand_constant_exponents.cpp  test_expr_op_expand_exponent_products.cpp  test_expr_op_expand_exponent_sums.cpp  test_expr_op_factor_common_denominator.cpp  test_expr_op_lower_negates.cpp  test_expr_op_parse.cpp  test_expr_op_rebalance_fraction.cpp  test_expr_op_simplify.cpp  test_expr_op_simplify_products.cpp  test_expr_op_simplify_sums.cpp  test_expr_op_tf.cpp  test_expr_opt_fold_constants.cpp  test_expr_opt_remove_useless_ops.cpp  test_expr_rotate_chain.cpp  test_expr_simplify.cpp  test_expr_to_rational.cpp  test_expr_to_rational_limit.cpp  test_expr_to_rational_limits.cpp  test_expr_zip_chains.cpp  test_graph_find_forward_paths.cpp  test_graph_find_loops.cpp  test_graph_find_nontouching.cpp  test_graph_mason.cpp  test_graph_op_find_forward_paths.cpp  (+40 more)
libbacktrace/: CMakeLists.txt
mathomatic/: CMakeLists.txt
mathomatic/include/mathomatic/: cmds.h  diff.h  externs.h  factor.h  factor_int.h  list.h  solve.h  standard.h
mathomatic/src/: am.c  cmds.c  complex.c  diff.c  factor_int.c  integrate.c  list.c  parse.c  simplify.c  super.c
plugins/: CMakeLists.txt  dpsfg-plugin.h  microui.h
plugins/bode-plot/: CMakeLists.txt
plugins/bode-plot/include/bode-plot/: bode_plot.h
plugins/bode-plot/src/: bode_plot.c  plugin.c
plugins/cmake/modules/: DPSFGPlugin.cmake
plugins/filter-designer/src/: plugin.c
plugins/graph-editor/: CMakeLists.txt
plugins/graph-editor/include/graph-editor/: attr.h  clipboard.h  color.h  color_picker.h  constants.h  draw.h  drawing.h  geometry.h  graph_editor.h  graph_helpers.h  graph_model.h  undo.h
plugins/graph-editor/res/: graph-editor.gresource.xml
plugins/graph-editor/src/: attr.c  clipboard.c  color.c  color_picker.c  draw.c  drawing.c  geometry.c  graph_editor.c  graph_helpers.c  graph_model.c  plugin.c  undo.c
plugins/math-viewer/: CMakeLists.txt
plugins/math-viewer/include/math-viewer/: math_viewer.h
plugins/math-viewer/src/: math_viewer.c  plugin.c
plugins/pole-zero/: CMakeLists.txt
plugins/pole-zero/include/pole-zero/: pole_zero_plot.h
plugins/pole-zero/src/: plugin.c  pole_zero_plot.c
plugins/substitutions/: CMakeLists.txt
plugins/substitutions/src/: plugin.c
plugins/time-plot/: CMakeLists.txt
plugins/time-plot/include/time-plot/: time_plot.h
plugins/time-plot/src/: plugin.c  time_plot.c
plugins/tweakables/: CMakeLists.txt
plugins/tweakables/src/: plugin.c
tests/: CMakeLists.txt
tests/src/: run_tests.cpp
ui/: CMakeLists.txt
ui-micro/: CMakeLists.txt
ui-micro/include/ui/: args.h  project_browser.h  renderer.h
ui-micro/src/: db.sqlgen  main.c  microui.c  plugin_loader.c  project_browser.c  renderer.c
ui/cmake/modules/: DPSFGPlugin.cmake
ui/include/dpsfg/: args.h  dynlib.h  fs.h  math_pipeline.h  plugin.h  plugin_loader.h  project_browser.h
ui/plugins/bode-plot/: CMakeLists.txt
ui/plugins/bode-plot/src/: bode_plot.c  (+1 more)
ui/plugins/filter-designer/: CMakeLists.txt
ui/plugins/graph-editor/: CMakeLists.txt
ui/plugins/math-viewer/: CMakeLists.txt
ui/plugins/pole-zero/: CMakeLists.txt
ui/plugins/substitutions/: CMakeLists.txt
ui/plugins/time-plot/: CMakeLists.txt
ui/plugins/tweakables/: CMakeLists.txt
ui/src/: args.c  db.sqlgen  dynlib.c  editable_label.c  fs.c  main.c  math_pipeline.c  plugin_loader.c  project_browser.c
(+64 files in other folders)
